Base Blue color changed

--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ input[type="submit"],input[type="reset"],.w3ls_footer_grid_leftl,.w3ls_footer_gr
 .banner img {
        margin: 0 auto;
     text-align: center;
-    /* border: 7px solid #44c7f4; */
+    /* border: 7px solid #369fc3; */
 }
 .banner h2 {
     font-size: 3.5em;
@@ -183,7 +183,7 @@ input[type="submit"],input[type="reset"],.w3ls_footer_grid_leftl,.w3ls_footer_gr
     letter-spacing: 6px;
 }
 .banner span {
-    color: #44c7f4;
+    color: #369fc3;
 	letter-spacing:4px;
 	font-size:0.9em;
 }
@@ -365,8 +365,8 @@ input[type="submit"],input[type="reset"],.w3ls_footer_grid_leftl,.w3ls_footer_gr
     -ms-border-radius: 50%;
 }
 .callbacks_here a:after{
-    background: #44c7f4;
-    border: 1px solid #44c7f4;
+    background: #369fc3;
+    border: 1px solid #369fc3;
     height: 3px;
     width: 45px;
     border-radius: 0;
@@ -390,10 +390,10 @@ ul.top-links li a i.fa {
 
 }
 ul.top-links li a i.fa:hover {
-    color:#44c7f4;
+    color:#369fc3;
 }
 .w3_navigation {
-    background: #44c7f4;
+    background: #369fc3;
     padding: 0.5em 0;
 }
 /*-- //social-icons --*/
@@ -404,7 +404,7 @@ ul.top-links li a i.fa:hover {
 }
 .w3ls-agile-left-info {
     padding: 1em 0;
-    border-bottom: 1px dashed #44c7f4;
+    border-bottom: 1px dashed #369fc3;
 }
 .w3ls-agile-left-info h4, .social-info h4 {
     font-size: 1.6em;
@@ -428,10 +428,10 @@ h3.w3l_head {
     letter-spacing: 2px;
 }
 h3.w3l_head.three {
-    color: #44c7f4;
+    color: #369fc3;
 }
 p.w3ls_head_para {
-    color: #44c7f4;
+    color: #369fc3;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 7px;
@@ -440,7 +440,7 @@ p.w3ls_head_para {
     margin-top: 3em;
 }
 .w3ls-agile-left-info a {
-    color: #44c7f4;
+    color: #369fc3;
 }
 /*-- //about --*/
 .pie-title-center {
@@ -495,7 +495,7 @@ h3.w3l_head.two {
 .list-gds  h4 {
     font-size:2em;
     margin: 0.5em 0;
-    color: #44c7f4;
+    color: #369fc3;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -545,7 +545,7 @@ body .bar_group__bar.thin::before {
 }
 body .bar_group__bar.thin {
     height: 17px;
-    background: #44c7f4;
+    background: #369fc3;
     margin-bottom:35px;
     -webkit-transition: width 2s;
     transition: width 2s;
@@ -593,7 +593,7 @@ p.b_label {
     margin-top: 2em;
 }
 .education-agile-w3l-year h6 {
-    color: #44c7f4;
+    color: #369fc3;
     text-transform: uppercase;
     letter-spacing:2px;
 	font-style:italic;
@@ -670,7 +670,7 @@ p.b_label {
     position: relative;
     font-size: 2.2em;
     background-color: transparent;
-    color: #44c7f4;
+    color: #369fc3;
     padding: 2em 0 0.5em;
     opacity: 0;
     filter: alpha(opacity=0);
@@ -728,7 +728,7 @@ p.counter {
 .agile_count_grid span{
 	 font-size:2em;
     text-transform: uppercase;
-       color: #44c7f4;
+       color: #369fc3;
 
 }
 .count {
@@ -766,7 +766,7 @@ p.counter {
     margin-top: 2em;
 }
 .w3_mail_grids input[type="submit"]:hover{
- background:#44c7f4;
+ background:#369fc3;
 }
 
 /*-- mail --*/
@@ -940,7 +940,7 @@ p.counter {
     height: 55px;
     border-radius: 50px;
     text-align: center;
-    background: #44c7f4;
+    background: #369fc3;
     margin: 0 auto;
 }
 .w3ls_footer_grid_leftl i{
@@ -967,7 +967,7 @@ p.counter {
 	font-size:14px;
 }
 .w3ls_footer_grid_leftr a:hover{
-	color:#44c7f4;
+	color:#369fc3;
 }
 .w3l_footer_pos{
       margin-top: 4em;
@@ -978,7 +978,7 @@ p.counter {
 	line-height:1.8em;
 }
 .w3l_footer_pos p a{
-	color:#44c7f4;
+	color:#369fc3;
 	text-decoration:underline;
 }
 .w3l_footer_pos p a:hover{
@@ -991,7 +991,7 @@ p.counter {
 	color:#212121;
 }
 .w3ls_footer_grid_left:hover .w3ls_footer_grid_leftr h4{
-	color:#44c7f4;
+	color:#369fc3;
 }
 .w3ls_footer_grid_left {
       background: #2e2e2e;
@@ -1008,6 +1008,9 @@ p.counter {
 	margin-bottom:-6px;
 	border:none;
 }
+
+
+
 /*-- to-top --*/
 #toTop {
 	display: none;
@@ -1078,7 +1081,7 @@ p.counter {
 		min-height: 639px;
 	}
 	.banner img {
-		border: 7px solid #44c7f4;
+		border: 7px solid #369fc3;
 		width: 20%;
 	}
 	.banner {
@@ -1241,13 +1244,13 @@ p.counter {
 		margin: 2em 0;
 	}
 	.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-		color: #44c7f4!important;
+		color: #369fc3!important;
 	}
 	#home {
 		min-height: 514px;
 	}
 	.banner img {
-		border: 7px solid #44c7f4;
+		border: 7px solid #369fc3;
 		width: 25%;
 	}
 	.banner {
@@ -1320,7 +1323,7 @@ p.counter {
 		padding: 0em 0;
 	}
 	.banner img {
-		border: 5px solid #44c7f4;
+		border: 5px solid #369fc3;
 		width: 31%;
 	}
 }
@@ -1508,7 +1511,7 @@ p.counter {
 }
 @media (max-width: 384px){
 	.banner img {
-		border: 5px solid #44c7f4;
+		border: 5px solid #369fc3;
 		width: 38%;
 	}
 	.abt-gd-left.text-center {
@@ -1573,7 +1576,7 @@ p.counter {
 		font-size: 1.4em;
 	}
 	p.w3ls_head_para {
-		color: #44c7f4;
+		color: #369fc3;
 		letter-spacing:4px;
 	}
 	.hovereffect h4 {
@@ -1598,7 +1601,7 @@ p.counter {
 		font-size: 12px !important;
 	}
 	.banner img {
-		border: 5px solid #44c7f4;
+		border: 5px solid #369fc3;
 		width: 38%;
 	}
 	.banner {
@@ -1636,7 +1639,7 @@ p.counter {
 	}
 
 	.banner img {
-		border: 5px solid #44c7f4;
+		border: 5px solid #369fc3;
 		width: 45%;
 	}
 }
