--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,6 @@ input[type="submit"],input[type="reset"],.w3ls_footer_grid_leftl,.w3ls_footer_gr
 .banner img {
        margin: 0 auto;
     text-align: center;
-    /* border: 7px solid #369fc3; */
 }
 .banner h2 {
     font-size: 3.5em;
@@ -404,7 +403,7 @@ ul.top-links li a i.fa:hover {
 }
 .w3ls-agile-left-info {
     padding: 1em 0;
-    border-bottom: 1px dashed #369fc3;
+    border-bottom: 1px solid #d6ebf3;
 }
 .w3ls-agile-left-info h4, .social-info h4 {
     font-size: 1.6em;
@@ -509,6 +508,14 @@ h3.w3l_head.two {
     font-size: 0.9em;
     color: #d2d6da;
     line-height: 2em;
+}
+.list-gds2{
+    font-size: 1em;
+    color: #d2d6da;
+    letter-spacing: 2px;
+    padding: 25px;
+    text-align: justify;
+
 }
 .list-gds i {
     font-size: 4em;
@@ -1094,7 +1101,6 @@ p.counter {
 		min-height: 639px;
 	}
 	.banner img {
-		border: 7px solid #369fc3;
 		width: 20%;
 	}
 	.banner {
@@ -1263,7 +1269,6 @@ p.counter {
 		min-height: 514px;
 	}
 	.banner img {
-		border: 7px solid #369fc3;
 		width: 25%;
 	}
 	.banner {
@@ -1336,7 +1341,6 @@ p.counter {
 		padding: 0em 0;
 	}
 	.banner img {
-		border: 5px solid #369fc3;
 		width: 31%;
 	}
 }
@@ -1524,7 +1528,6 @@ p.counter {
 }
 @media (max-width: 384px){
 	.banner img {
-		border: 5px solid #369fc3;
 		width: 38%;
 	}
 	.abt-gd-left.text-center {
@@ -1614,7 +1617,6 @@ p.counter {
 		font-size: 12px !important;
 	}
 	.banner img {
-		border: 5px solid #369fc3;
 		width: 38%;
 	}
 	.banner {
@@ -1652,7 +1654,6 @@ p.counter {
 	}
 
 	.banner img {
-		border: 5px solid #369fc3;
 		width: 45%;
 	}
 }
