Copyright color fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -910,7 +910,7 @@ p.counter {
 	line-height:1.8em;
 }
 .w3l_footer_pos p a{
-	color:#369fc3;
+	color:#fff;
 	text-decoration:underline;
 }
 .w3l_footer_pos p a:hover{
